# Stratton-Oakmont

./: README.md  pck.yml  pyproject.toml  samconfig.toml  template.yaml
.aws-sam/: build.toml
src/: fileUploadTrigger.py
